Plain English para 1

--- a/index.html
+++ b/index.html
@@ -180,6 +180,14 @@
       </p>
     </header>
 
+    <!-- ⭐ NEW SECTION BELOW HERO -->
+    <section>
+      <h2>What EntityWorks Does</h2>
+      <p>
+        EntityWorks ensures that AI systems understand people, organisations, relationships, and ideas correctly. We formalise the discipline that governs AI’s interpretation of the world and create the frameworks that keep that understanding accurate, stable, and trustworthy as AI systems evolve.
+      </p>
+    </section>
+
     <!-- INTRO / ORIGIN -->
     <section>
       <h2>2025 - The Birth of the AI-Native Company</h2>
