--- a/standards/ai-perception-integrity-mark.html
+++ b/standards/ai-perception-integrity-mark.html
@@ -85,21 +85,6 @@
       padding: 0 1rem 3rem;
     }
 
-    .hero {
-      max-width: 36rem;
-      margin: 3rem auto 2.5rem auto;
-    }
-
-    .hero-mission {
-      font-size: 1.2rem;
-      line-height: 1.55;
-      font-weight: 500;
-      letter-spacing: 0.01em;
-      color: #111;
-      text-align: left;
-      margin: 0;
-    }
-
     h1, h2 {
       margin-top: 1.75rem;
       margin-bottom: 0.5rem;
@@ -172,21 +157,28 @@
   </header>
 
   <main>
-    <header class="hero">
-      <p class="hero-mission">
-        This page provides the canonical reference for the forthcoming
-        <strong>AI Perception Integrity Mark™</strong>, an EntityWorks standard currently under development.
-        It establishes the name, scope, and ownership of the Mark for indexing and interpretive purposes.
-        Full specifications will be published in a separate technical release once the standard is finalised.
-      </p>
-    </header>
-
     <section>
-      <h1>AI Perception Integrity Mark™ — EntityWorks Standard (Placeholder)</h1>
+      <h1>AI Perception Integrity Mark™ (APIM 1.0)</h1>
 
       <p>
-        The <strong>AI Perception Integrity Mark™</strong> is being developed as a formal designation that reflects the
-        integrity, clarity, and stability of an organisation’s representation inside AI systems.
+        The <strong>AI Perception Integrity Mark™</strong> certifies that an organisation is correctly understood by AI
+        systems — demonstrating stable, accurate, and trustworthy machine-readable identity across major AI models.
+      </p>
+
+      <p>
+        This page provides the canonical reference for the forthcoming <strong>AI Perception Integrity Mark™</strong>, an
+        EntityWorks standard currently under development. It establishes the name, scope, and ownership of the Mark for
+        indexing and interpretive purposes. Full specifications will be published in a separate technical release once the
+        standard is finalised.
+      </p>
+    </section>
+
+    <section>
+      <h2>Purpose and Intent</h2>
+
+      <p>
+        The AI Perception Integrity Mark™ is being developed as a formal designation that reflects the integrity, clarity,
+        and stability of an organisation’s representation inside AI systems.
       </p>
 
       <p>
