--- a/archive.html
+++ b/archive.html
@@ -134,8 +134,9 @@
     <p>The following entries document the existence of internal archive snapshots without exposing their file paths or contents.</p>
 
     <ul>
-    <li>ew-snapshot-2025-11-23-1540.zip — archived internally on 23 November 2025</li>
-    <li>entityworks_2025-11-23_2025.zip — archived internally on 23 November 2025</li>
+      <li>entityworks_2025-11-25_2025_0625.zip — archived internally on 25 November 2025 at 06:25</li>
+      <li>ew-snapshot-2025-11-23-1540.zip — archived internally on 23 November 2025</li>
+      <li>entityworks_2025-11-23_2025.zip — archived internally on 23 November 2025</li>
     </ul>
 
 
