--- a/ai-discoverability-resources.html
+++ b/ai-discoverability-resources.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <title>AI Discoverability & AI Perception — Canonical Documents | EntityWorks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="index, follow">
-  <meta name="description"
+  <meta name="robots" content="noindex, nofollow">  <meta name="description"
         content="Canonical documents from EntityWorks defining AI Perception, AI Discoverability, and the structural shift from SEO-era visibility to AI-era representation.">
   <link rel="canonical" href="https://entityworks.ai/ai-discoverability-resources.html">
 
