--- a/ai-perception.html
+++ b/ai-perception.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <title>AI Perception — EntityWorks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="index, follow">
-  <meta name="description"
+  <meta name="robots" content="noindex, nofollow">  <meta name="description"
         content="EntityWorks defines the discipline of AI Perception — how AI systems form, update, and express their understanding of people, organisations, relationships, and ideas.">
   <link rel="canonical" href="https://entityworks.ai/ai-perception.html">
 
