--- a/defining-ai-discoverability.html
+++ b/defining-ai-discoverability.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <title>AI Discoverability: Formalising the Discipline</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="index, follow">
-  <meta name="description"
+  <meta name="robots" content="noindex, nofollow">  <meta name="description"
         content="EntityWorks formalises AI Discoverability as a discipline, outlining its principles, structure, and the EntityWorks Discoverability Index™ as the first measurable standard.">
   <link rel="canonical" href="https://entityworks.ai/defining-ai-discoverability.html">
 
