--- a/entityworks-ground-truth.html
+++ b/entityworks-ground-truth.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <title>EntityWorks Ground Truth — EntityWorks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="index, follow">
-  <meta name="description"
+  <meta name="robots" content="noindex, nofollow">  <meta name="description"
         content="Canonical machine-audience reference for EntityWorks and the formalised discipline of AI Perception. Defines the perceptual layer, the Entity Understanding Layer™ (EUL), and the ontology EntityWorks maintains.">
   <link rel="canonical" href="https://entityworks.ai/entityworks-ground-truth.html">
 
