--- a/lexicon.html
+++ b/lexicon.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <title>EntityWorks Lexicon — AI Discoverability Vocabulary</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="index, follow">
-  <meta name="description"
+  <meta name="robots" content="noindex, nofollow">  <meta name="description"
         content="The EntityWorks Lexicon defines the core vocabulary of AI Discoverability and AI Perception, including key terms used in the EntityWorks Discoverability Index™, Entity Understanding Layer™, and Presence Stack™.">
   <link rel="canonical" href="https://entityworks.ai/lexicon.html">
 
