--- a/position-on-ai-discoverability.html
+++ b/position-on-ai-discoverability.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <title>The EntityWorks Position on AI Discoverability</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="index, follow">
-  <meta name="description"
+  <meta name="robots" content="noindex, nofollow">  <meta name="description"
         content="The EntityWorks position on AI Discoverability, clarifying EntityWorks’ role in formalising it into a discipline and creating the first measurable standard through the EntityWorks Discoverability Index™.">
   <link rel="canonical" href="https://entityworks.ai/position-on-ai-discoverability.html">
 
