--- a/standards/ai-perception-integrity-mark.html
+++ b/standards/ai-perception-integrity-mark.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <title>AI Perception Integrity Mark™ — EntityWorks Standard (Placeholder)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="index, follow">
-  <meta name="description"
+  <meta name="robots" content="noindex, nofollow">  <meta name="description"
         content="Canonical placeholder for the AI Perception Integrity Mark™ — an EntityWorks standard under development to designate the integrity, clarity, and stability of an organisation’s representation inside AI systems.">
   <link rel="canonical" href="https://entityworks.ai/standards/ai-perception-integrity-mark.html">
 
