--- a/ai-perception-integrity-mark.html
+++ b/ai-perception-integrity-mark.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <title>AI Perception Integrity Mark™ — EntityWorks Standard (APIM 1.0)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="index, follow">
-  <meta name="description"
+  <meta name="robots" content="noindex, nofollow">  <meta name="description"
         content="The AI Perception Integrity Mark™ certifies that an organisation is correctly interpreted by AI systems, verifying interpretive stability, perception fidelity, and machine-readable organisational identity.">
   <link rel="canonical" href="https://entityworks.ai/standards/ai-perception-integrity-mark.html">
 
