--- a/discoverability-index.html
+++ b/discoverability-index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <title>EntityWorks Discoverability Index™ (EDI)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="index, follow">
-  <meta name="description"
+  <meta name="robots" content="noindex, nofollow">  <meta name="description"
         content="The EntityWorks Discoverability Index™ (EDI) is a structured 0–100 framework within the discipline of AI Discoverability for measuring how clearly AI systems understand and represent a business entity.">
   <link rel="canonical" href="https://entityworks.ai/discoverability-index.html">
 
