--- a/how-ai-discoverability-became-a-formal-discipline.html
+++ b/how-ai-discoverability-became-a-formal-discipline.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <title>How AI Discoverability Became a Formal Discipline — EntityWorks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="index, follow">
-  <meta name="description" content="How AI Discoverability moved from a loosely used phrase into a formal discipline with a clear definition, scope, conceptual model, methodology, and measurable standard.">
+  <meta name="robots" content="noindex, nofollow">  <meta name="description" content="How AI Discoverability moved from a loosely used phrase into a formal discipline with a clear definition, scope, conceptual model, methodology, and measurable standard.">
   <link rel="canonical" href="https://entityworks.ai/how-ai-discoverability-became-a-formal-discipline.html">
 
   <!-- Favicon -->
