--- a/legal.html
+++ b/legal.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <title>Legal — EntityWorks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="index, follow">
-  <meta name="description" content="Legal information and terms of use for the EntityWorks website.">
+  <meta name="robots" content="noindex, nofollow">  <meta name="description" content="Legal information and terms of use for the EntityWorks website.">
   <link rel="canonical" href="https://entityworks.ai/legal.html">
 
   <style>
