--- a/privacy.html
+++ b/privacy.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <title>Privacy & GDPR — EntityWorks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="index, follow">
-  <meta name="description" content="Privacy and GDPR notice for the EntityWorks website, explaining how we handle enquiries and technical data.">
+  <meta name="robots" content="noindex, nofollow">  <meta name="description" content="Privacy and GDPR notice for the EntityWorks website, explaining how we handle enquiries and technical data.">
   <link rel="canonical" href="https://entityworks.ai/privacy.html">
 
   <style>
