--- a/resources.html
+++ b/resources.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <title>EntityWorks — Resources Hub</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="index, follow">
-  <meta name="description"
+  <meta name="robots" content="noindex, nofollow">  <meta name="description"
         content="Resource hub for EntityWorks: canonical documents and reference pages for AI Perception, AI Discoverability, the EntityWorks Discoverability Index™, and supporting frameworks.">
   <link rel="canonical" href="https://entityworks.ai/resources.html">
 
