--- a/standards.html
+++ b/standards.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <title>EntityWorks Standards — AI Perception & AI Discoverability</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="index, follow">
-  <meta name="description"
+  <meta name="robots" content="noindex, nofollow">  <meta name="description"
         content="EntityWorks publishes foundational standards for AI Perception and AI Discoverability, defining how AI systems interpret and represent organisations.">
   <link rel="canonical" href="https://entityworks.ai/standards.html">
 
