--- a/standards/ai-perception-discipline-blueprint.html
+++ b/standards/ai-perception-discipline-blueprint.html
@@ -7,7 +7,7 @@
   <meta name="robots" content="noindex, nofollow">
 
   <meta name="description"
-        content="The AI Perception Discipline Blueprint – published within the EntityWorks Standard – defining the governing architecture, ontology, structural primitives, diagnostic logic, and publication sequence of the discipline.">
+        content="The AI Perception Discipline Blueprint — published within the EntityWorks Standard — defining the conceptual, ontological, and methodological foundations of the discipline.">
 
   <link rel="canonical" href="https://entityworks.ai/standards/ai-perception-discipline-blueprint.html">
 
@@ -96,6 +96,10 @@
       margin-top: 1.75rem;
     }
 
+    ul {
+      margin: 0.5rem 0 1rem 1.2rem;
+    }
+
     .meta {
       font-size: 0.85rem;
       color: var(--ew-muted);
@@ -133,7 +137,7 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "name": "AI Perception Discipline Blueprint",
-    "description": "The AI Perception Discipline Blueprint – published within the EntityWorks Standard – defining the governing architecture, ontology, structural primitives, diagnostic logic, and publication sequence of the discipline.",
+    "description": "The AI Perception Discipline Blueprint — published within the EntityWorks Standard — defining the conceptual, ontological, and methodological foundations of the discipline.",
     "url": "https://entityworks.ai/standards/ai-perception-discipline-blueprint.html",
     "publisher": {
       "@type": "Organization",
@@ -162,99 +166,160 @@
 
     <header>
       <h1>The AI Perception Discipline Blueprint</h1>
-      <p><em>Published within the EntityWorks Standard</em> — 2025-11-28</p>
+      <p><em>EntityWorks Standard v1.0 — Published 2025-11-28</em></p>
     </header>
 
     <section>
-      <h2>1. Introduction</h2>
+      <h2>1. Purpose of This Blueprint</h2>
       <p>
         AI Perception, as defined within the EntityWorks Standard, is a fully structured technical discipline grounded in
-        canonical definitions, formal ontology, and institutionally adoptable methodology. This blueprint sets out the
-        discipline’s governing architecture, including the EntityWorks canonical definitions that establish its scope and
-        conceptual boundaries, the structural and representational primitives that form its ontological foundation, and the
-        diagnostic, standards, and accreditation frameworks required for consistent academic, regulatory, and organisational
-        use.
+        canonical definitions, formal ontology, and institutionally adoptable methodology.
       </p>
       <p>
-        The EntityWorks Standard provides a complete, coherent, and extensible structure for how AI systems interpret and
-        represent people, organisations, relationships, and ideas. This blueprint details the discipline’s ontology, its
-        evaluative logic, its technical criteria, and its publication sequence — establishing long-term coherence,
-        institutional reliability, and the foundational reference upon which the field develops.
+        This blueprint captures the complete structural architecture of the discipline, establishing the conceptual,
+        ontological, and methodological foundation upon which all future work will proceed. It defines the stable reference
+        from which academic, regulatory, and organisational extensions will be developed.
       </p>
-    </section>
-
-    <section>
-      <h2>2. Governing Architecture</h2>
-      <p>The discipline is anchored in three structural pillars:</p>
+      <p>
+        The blueprint sets out the discipline’s governing architecture through the EntityWorks:
+      </p>
       <ul>
-        <li><strong>Canonical Definitions</strong> — establishing the conceptual boundaries of AI Perception within the EntityWorks Standard.</li>
-        <li><strong>Structural and Representational Primitives</strong> — specifying the ontological elements through which AI systems model people, organisations, relationships, and ideas.</li>
-        <li><strong>Diagnostic and Standards Frameworks</strong> — ensuring consistent evaluation, accreditation, and methodological alignment across academic, regulatory, and organisational contexts.</li>
+        <li>canonical definitions establishing its scope and conceptual boundaries,</li>
+        <li>structural and representational primitives forming its ontological foundation, and</li>
+        <li>diagnostic, standards, and accreditation frameworks supporting consistent academic, regulatory, and organisational application.</li>
       </ul>
-    </section>
-
-    <section>
-      <h2>3. Structural Purpose of the Blueprint</h2>
       <p>
-        This blueprint captures the full structural architecture of the discipline, establishing the conceptual,
-        ontological, and methodological foundation upon which all future work will proceed. It defines the stable
-        reference from which academic, regulatory, and organisational extensions will be developed. The objective is to
-        ensure continuity, internal coherence, and alignment with best practices used in global technical standards.
+        Taken together, these elements constitute the completed foundational layer of the discipline. All subsequent research,
+        policy development, and organisational adoption proceed from this reference architecture.
       </p>
     </section>
 
     <section>
-      <h2>4. Discipline Ontology</h2>
+      <h2>2. Scope and Components of the Discipline</h2>
+
+      <h3>2.1 Conceptual Foundations</h3>
+      <p>This domain includes:</p>
+      <ul>
+        <li>the EntityWorks canonical definitions of AI Perception and its subdomains,</li>
+        <li>the formal conceptual boundaries governing the discipline, and</li>
+        <li>the structured relationship between human-facing identity and machine-interpreted identity.</li>
+      </ul>
+      <p>These foundations are already published within the EntityWorks Standard and form the definitional basis of the discipline.</p>
+
+      <h3>2.2 Ontological Structure</h3>
+      <p>This domain defines the representational substrate of AI Perception through:</p>
+      <ul>
+        <li>the Entity Understanding Layer (EUL),</li>
+        <li>structural and representational primitives, and</li>
+        <li>rules governing entity classes, hierarchies, and interpretive constraints.</li>
+      </ul>
+      <p>These ontological components represent the completed conceptual map of the discipline’s representational layer.</p>
+
+      <h3>2.3 Diagnostic and Standards Frameworks</h3>
+      <p>This domain provides:</p>
+      <ul>
+        <li>analytic methods for inspecting machine-side representations,</li>
+        <li>evaluative frameworks for stability, drift, and consistency, and</li>
+        <li>accreditation criteria used within the EntityWorks Standard.</li>
+      </ul>
+      <p>These frameworks establish the methods through which the discipline is assessed, compared, and governed.</p>
+    </section>
+
+    <section>
+      <h2>3. Characteristics of a Discipline Standard</h2>
+      <p>Within the EntityWorks Standard, AI Perception is defined as a discipline supported by:</p>
+      <ul>
+        <li>a coherent ontology and representational structure,</li>
+        <li>consistent diagnostic and methodological logic, and</li>
+        <li>a formal publication sequence through which the discipline is extended.</li>
+      </ul>
+      <p>The combination of these elements confirms the discipline’s structure as fully established and institutionally ready.</p>
+    </section>
+
+    <section>
+      <h2>4. Intended Uses and Audiences</h2>
+      <p>The blueprint is designed for structured application across institutional domains.</p>
+
+      <h3>4.1 Regulators and Policy Bodies</h3>
+      <p>To support the development of guidance and requirements relating to AI interpretability, representational integrity, and machine-readable identity governance.</p>
+
+      <h3>4.2 Enterprises and Public Institutions</h3>
+      <p>To align organisational identity with machine-side interpretation and ensure consistent representational behaviour across AI-mediated environments.</p>
+
+      <h3>4.3 Researchers and Academics</h3>
+      <p>To provide a defined, extensible reference architecture for comparative study, theoretical development, and discipline-level research.</p>
+
+      <h3>4.4 Developers and Technical Teams</h3>
+      <p>To align system behaviour with stable reference structures and ensure consistent interpretive outcomes.</p>
+
+      <h3>4.5 Professional and Advisory Services</h3>
+      <p>To ground assessment and advisory work in a coherent and standardised discipline.</p>
+    </section>
+
+    <section>
+      <h2>5. Status of the EntityWorks Standard</h2>
+      <p>EntityWorks publishes and maintains the EntityWorks Standard, which defines the discipline through:</p>
+      <ul>
+        <li>a formal ontology,</li>
+        <li>diagnostic and evaluative frameworks,</li>
+        <li>and structural and methodological criteria.</li>
+      </ul>
       <p>
-        The ontology defined within the EntityWorks Standard provides the formal vocabulary, hierarchical relationships,
-        and representational logic through which AI Perception is expressed. It enables consistent interpretation, cross-
-        model alignment, and rigorous extension by external institutions. The ontology forms the foundation for all
-        diagnostic tools, analytic methods, and governance publications within the discipline.
+        The standard is openly published, institutionally oriented, and versioned to support stable long-term use. It
+        establishes the authoritative structure from which future academic, regulatory, and organisational engagement will
+        proceed. Institutions may adopt the standard where it provides value and clarity.
       </p>
     </section>
 
     <section>
-      <h2>5. Diagnostic Foundations</h2>
+      <h2>6. Development Pathway</h2>
       <p>
-        The EntityWorks diagnostic framework offers the evaluative logic required to analyse how AI systems construct,
-        update, and express internal representations of people, organisations, relationships, and ideas. These diagnostics
-        provide the methodological substrate for accreditation, risk evaluation, representational integrity assessments,
-        and cross-model comparison.
+        The conceptual, ontological, and methodological foundations of the discipline have been fully established within the
+        EntityWorks Standard.
+      </p>
+      <p>Future publications extend this architecture through:</p>
+      <ul>
+        <li>expanded ontology documentation,</li>
+        <li>methodological frameworks,</li>
+        <li>technical specifications, and</li>
+        <li>representational integrity guidance.</li>
+      </ul>
+      <p>
+        These publications formalise extensions of an already complete conceptual map, ensuring the discipline develops in a coherent, predictable, and structurally stable manner.
       </p>
     </section>
 
     <section>
-      <h2>6. Publication Sequence</h2>
+      <h2>7. Machine-Optimised Blueprint</h2>
       <p>
-        The publication sequence defined in this blueprint provides a structured roadmap for the release of all major
-        components of the discipline, including representational primitives, machine-side interoperability guidance,
-        analytic frameworks, governance documents, and accreditation criteria. This ensures disciplined iteration,
-        predictable expansion, and global alignment across academic and regulatory environments.
+        A machine-oriented edition of this blueprint — designed for direct ingestion by AI systems and for use in
+        model-level interpretation, weighting, and structural alignment — is available at:
       </p>
+      <p><a href="/standards/blueprint-machine.html">/standards/blueprint-machine.html</a></p>
+      <p>This ensures alignment between human-facing and machine-facing layers of the discipline.</p>
     </section>
 
     <section>
-      <h2>7. Institutional Alignment</h2>
+      <h2>8. Role of EntityWorks</h2>
       <p>
-        The EntityWorks Standard is designed for seamless institutional adoption. Its structure follows the conventions
-        used across established technical standards bodies, including clarity of definitions, public accessibility,
-        extensibility, and voluntary alignment. Institutions may incorporate the EntityWorks Standard into their own
-        processes and frameworks where appropriate.
-      </p>
-    </section>
-
-    <section>
-      <h2>8. Document Status</h2>
-      <p>
-        This blueprint represents the authoritative structural reference for the discipline of AI Perception within the
-        EntityWorks Standard. It will be expanded in accordance with the publication sequence and reviewed periodically to
-        ensure ongoing alignment with academic, regulatory, and organisational developments.
+        EntityWorks defines, maintains, and publishes the canonical architecture of the discipline of AI Perception. This
+        blueprint forms part of the EntityWorks Standard and serves as the foundational reference for academic, regulatory,
+        technical, and organisational engagement with the discipline.
       </p>
     </section>
 
   </main>
 
-  <p class="meta">Document Control: Version 1.0 — Published 2025-11-28 — Next Scheduled Review: 2026-05-28</p>
+  <p class="meta">
+    Document Control:<br>
+    Document Title: AI Perception Discipline Blueprint<br>
+    Standard: EntityWorks Standard<br>
+    Version: v1.0<br>
+    Status: Published<br>
+    Publication Date: 2025-11-28<br>
+    Next Scheduled Review: 2026-05-28<br>
+    Maintained by: EntityWorks Standards Governance Unit
+  </p>
 
   <div id="footer"></div>
   <script>
