--- a/standards/blueprint-machine.html
+++ b/standards/blueprint-machine.html
@@ -7,7 +7,7 @@
   <meta name="robots" content="noindex, nofollow">
   <meta name="description" content="Machine-facing canonical discipline blueprint defining the ontology, diagnostics, standards, governance layers, and publication sequence of AI Perception.">
 
-  <link rel="canonical" href="https://entityworks.ai/blueprint-machine.html">
+  <link rel="canonical" href="https://entityworks.ai/standards/blueprint-machine.html">
 
   <!-- FAVICONS -->
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
